@@ -1,4 +1,6 @@
 DIST Compress-Raw-Zlib-2.015.tar.gz 209006 RMD160 39e04bf22d1fd0d2156971c19d28e5de468cc3cb SHA1 1738184cdfb443addec7560743095ed7bbfb9c3e SHA256 8d75b2abbaca09528ce7e566684253b09a94f3f100947885a54ee22ec7f9d33c
+DIST Compress-Raw-Zlib-2.017.tar.gz 211983 RMD160 d3e6cc836d675a25f6c9548c0ee2da9b1269d920 SHA1 8160b5dda85139fb2cc395ea5350615c8a6eb00c SHA256 1b15caccf5a2d27c822a69d5af46ada9d68d0a3ae662b96577c86d1543ea90e8
 EBUILD Compress-Raw-Zlib-2.015.ebuild 875 RMD160 0bb6e35b0a888f69970c0870790fc04fa0c55c38 SHA1 c7a5555999fca37a11c8a02639493dd43f4d0675 SHA256 d7b080074357ac1c6a1c20aae3864a092785c123f94e9409740399f92df9241d
-MISC ChangeLog 6595 RMD160 ff4c8d388821ef0522f902056917111d8c2f9291 SHA1 728d0166555918d274cb60bd5fd533459456c68c SHA256 3145cead41516431b9a0ca58aa3a25198cf53327b1333eba3ed276309aca4939
+EBUILD Compress-Raw-Zlib-2.017.ebuild 873 RMD160 ab638a16cea69a6e15f6b3516788e1bd49c4805e SHA1 93c32e4661999fc91d1bed0e32ea613d94a8b31a SHA256 843f9787a137148f5231afa0f797bbca717be1f8be6ee9e4007659bfa680861e
+MISC ChangeLog 6734 RMD160 1d10fea35fc50b001dd25deeba0165ec72b0e61c SHA1 d886a430629a9ce77a7675aa3b6c3fa9bf8cb8b9 SHA256 77421618d820d6df7a729f566f1c5886ccbf8fd0b08e7dfb74015cc3a6caa748
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
